# ros_course

./: .gitignore  README.md
chat/: CMakeLists.txt  package.xml  readme.md
chat/cfg/: rosconsole.conf
chat/launch/: chat.launch  chat2.launch  chat3.launch
chat/src/: listener.cpp
control_selector/: CMakeLists.txt  package.xml  readme.md
control_selector/cfg/: rosconsole.conf
control_selector/launch/: selector.launch
control_selector/src/: control.h  control_selector_node.cpp  dummy_control.cpp  dummy_control.h  notsodummy.cpp  notsodummy.h  voyagercontrol.cpp  voyagercontrol.h
lane_detector/: CMakeLists.txt  package.xml
lane_detector/launch/: detector.launch  video.launch
lane_detector/src/: lane_detector.cpp
line_control/: CMakeLists.txt  package.xml  readme.html  readme.md
line_control/cfg/: rosconsole.conf
line_control/launch/: line.launch
line_control/src/: line_control.cpp  line_control.h  line_control_node.cpp
navigation/: CMakeLists.txt  navi.rviz  package.xml
navigation/launch/: gmapping_low.launch  navi.launch  navigation.launch  navigation_amcl.launch  save_map.launch
navigation/launch/move_base/: base_local_planner_params.yaml  costmap_common_params.yaml  move_base.xml
patrol_bot/: CMakeLists.txt  package.xml  readme.md
patrol_bot/src/: patrol_bot_node.cpp
robot_control/: CMakeLists.txt  package.xml  readme.md
robot_control/cfg/: rosconsole.conf
robot_control/src/: robot_control.cpp
simple_map/: CMakeLists.txt  package.xml  readme.md
simple_map/cfg/: map.rviz  rosconsole.conf
simple_map/include/simple_map/: scan_to_map.h
simple_map/launch/: map.launch
simple_map/src/: scan_to_map.cpp  simple_map.cpp
simple_map/test/: scan_to_map_test.cpp
stage_launch/: CMakeLists.txt  package.xml
stage_launch/launch/: task1.launch
stage_launch/worlds/: empty.world  obstacle.world  pioneer.inc  task1.world
