<?xml version="1.0"?>
<package>
  <name>robot_control</name>
  <version>0.0.0</version>
  <description>The robot_control package</description>

  <maintainer email="viki@todo.todo">viki</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>sensor_msgs</run_depend>

</package>
